# cgit

./: .gitignore  CMakeLists.txt  build  coverage.info  readme.MD
include/: main.h
include/commands/: addCommands.h  blobCommands.h  commitCommands.h  init.h  refCommands.h  treeCommands.h
include/core/: blob.h  commit.h  object.h  tree.h
include/util/: hash.h  ignore.h  read.h
src/: main.c
src/commands/: addCommands.c  blobCommands.c  init.c  treeCommands.c
src/core/: blob.c  commit.c  object.c  tree.c
src/util/: hash.c  ignore.c  read.c
tests/: test_main.c
tests/fixtures/: sample.txt
